--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,11 +1,15 @@
 {
     "compilerOptions": {
         "target": "ESNext",
-        "module": "commonjs",
+        "module": "CommonJS",
         "declaration": true,
         "noImplicitAny": true,
         "removeComments": true,
         "experimentalDecorators": true,
+        "lib": [
+			"es6",
+            "DOM",
+		],
         "rootDir": ".",
         "sourceMap": true,
         "listFiles": true,
