Add dotenv and port env

--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
         "expressjs": "^1.0.1",
         "https": "^1.0.0",
         "path": "^0.12.7"
+    },
+    "devDependencies": {
+        "dotenv": "^16.0.0"
     }
 }
