--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "main": "lauch.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
-        "dev": "nodemon lauch.js"
+        "dev": "nodemon lauch.js",
+        "prod": "node lauch.js"
     },
     "repository": {
         "type": "git",
