--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "express": "^4.17.3",
         "expressjs": "^1.0.1",
         "https": "^1.0.0",
+        "nodemon": "^2.0.20",
         "path": "^0.12.7"
     },
     "devDependencies": {
